--- a/Sass/_color.scss
+++ b/Sass/_color.scss
@@ -6,3 +6,7 @@ $Gray: hsl(0, 0%, 75%);
 $GrayishViolet: hsl(257, 7%, 63%);
 $VeryDarkBlue: hsl(255, 11%, 22%);
 $VeryDarkViolet: hsl(260, 8%, 14%);
+$HoverGreenButton: hsl(180, 56%, 65%);
+$White: #fff;
+$Black: #000;
+$BodyBackgroundColor: rgb(240, 241, 246);
