--- a/Sass/main.scss
+++ b/Sass/main.scss
@@ -1,6 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap');
 @import "color";
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 *{
     margin: 0;
     padding: 0;
@@ -47,14 +52,22 @@ li {
     padding: 0.9rem 2.8rem;
     border-radius: 3rem;
     font-weight: 700;
+    border: none;
     &:hover {
         background-color: $HoverGreenButton;
         color: white;
     }
 }
 
+.hide {
+  display: none;
+}
+
 /*Navigation Bar*/
 .header {
+  &--mobile {
+    display: none;
+  }
     width: 100%;
     overflow: hidden;
     justify-content: center;
@@ -74,7 +87,29 @@ li {
         margin-top: 1rem;
       }
     }
-    &--buttons {
+    & .buttons {
+      @extend .flex;
+      width: auto;
+      max-width: max-content;
+      gap: 2rem;
+      font-size: 16px;
+      font-weight: 700;
+      cursor: pointer;
+      &--secondary {
+        color: $GrayishViolet;
+      }
+      &--primary--small {
+        background-color: $Cyan;
+        color: $White;
+        padding: 0.5rem 1.5rem;
+        border-radius: 3rem;
+        font-weight: 700;
+        &:hover {
+          background-color: $HoverGreenButton;
+        }
+      }
+    }
+    .desktop--nav {
       @extend .flex;
       width: 100%;
       height: auto;
@@ -94,31 +129,7 @@ li {
           }
         } 
       }
-      & .buttons {
-        @extend .flex;
-        width: auto;
-        max-width: max-content;
-        gap: 2rem;
-        font-size: 16px;
-        font-weight: 700;
-        cursor: pointer;
-        &--primary {
-          color: $GrayishViolet;
-        }
-        &--secondary--small {
-          background-color: $Cyan;
-          color: $White;
-          padding: 0.5rem 1.5rem;
-          border-radius: 3rem;
-          font-weight: 700;
-          &:hover {
-            background-color: $HoverGreenButton;
-          }
-        }
-      }
-    }
-    &--mobile {
-      display: none;
+    
     }
   }
 
@@ -140,7 +151,7 @@ li {
             @extend .text;
             font-size: 1.5rem;
         }
-        & .buttons--secondary {
+        & .buttons--primary {
           @extend .button;
         }       
     }
@@ -158,11 +169,10 @@ li {
     
 }
 #link{
-    height: 3.5em;
+    // height: 3.5em;
     width: 56rem;
     border: solid transparent;
     border-radius: 0.5em;
-    padding-left: 2em;
 }
 
 .input-link input::placeholder {
@@ -268,7 +278,7 @@ li {
         color: white;
         text-align: center;
     }
-    .buttons--secondary {
+    .buttons--primary {
         @extend .button;
         display: flex;
         border-style: none;
@@ -323,9 +333,12 @@ li {
       align-items: center;
       justify-content: space-between;
     }
-
-    &--buttons {
-      display: flex;
+    .hidden {
+      display: none;
+    }
+    
+    .mobile--nav {
+      display: none;
       width: calc(100% - 100px);
       flex-direction: column;
       margin-top: 25rem;
@@ -360,13 +373,13 @@ li {
       width: 100%;
       gap: 0;
       margin: 0 auto;
-      &--primary {
+      &--secondary {
         padding: 1rem 0;
         color: white;
       }
-      &--secondary--small {
+      &--primary--small {
         width: 100%;
-        padding: 0.7rem 1rem;
+        padding: 0.7rem 4rem;
       }
     }
     &--mobile {
